[package]
name = "advent-2019"
version = "0.1.0"
authors = ["MetroWind <chris.corsair@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[lib]
name = "meta"
proc-macro = true
path = "advent/meta.rs"

[[bin]]
name = "advent-2019"
path = "main.rs"

[[bin]]
name = "assembler"
path = "intcode/assembler.rs"
